date search and error functionality added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css"></link>
     <title>Capstone</title>
-</head>
+</head> 
 <body>
     <form class ="dateSearch">
     <h2>Date and year</h2>
@@ -20,11 +20,16 @@
     <input class="topicYear" type="text" placeholder="year">
     <button class="findTopic">Find Topic</button>
     </form>
+    <div class ="topicValidBox"></div>
     <form class="randomBox">
     <h2>See Example</h2>
     <button class="example">See Example</button>
     <button class="random">random</button>
     </form>
+    <div class ="exampleDiv">
+
+      <button class ="return">return home</button>
+    </div>
     <div class ="news">
     <ul class ="articles"></ul>
     </div>
