--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
     <button class="example">See Example</button>
     <button class="random">random</button>
     </form>
-    <div class ="exampleDiv">
+    <!-- <div class ="exampleDiv"> -->
 
-      <button class ="return">return home</button>
+      <!-- <button class ="return">return home</button> -->
     </div>
-    <div class ="news">
-    <ul class ="articles"></ul>
+    <div class ="articles">
+    <ul class ="pres"></ul>
+    <ul class ="sports"></ul>
+    <ul class ="tech"></ul>
+    <ul class ="arts"></ul>
+    <ul class ="world"></ul>
+    <ul class ="us"></ul>
     </div>
 </body>
 
