working url for wiki api

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <!-- <button class ="return">return home</button> -->
     </div>
     <div class ="articles">
-    <ul class ="pres"></ul>
-    <ul class ="sports"></ul>
-    <ul class ="tech"></ul>
-    <ul class ="arts"></ul>
-    <ul class ="world"></ul>
-    <ul class ="us"></ul>
+    <div class ="pres"></div>
+    <div class ="sports"></div>
+    <div class ="tech"></div>
+    <div class ="arts"></div>
+    <div class ="world"></div>
+    <div class ="us"></div>
     </div>
 </body>
 
