ability to eliminate empty paragraphs and headlines implemented

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <!-- <button class ="return">return home</button> -->
     </div>
     <div class ="articles">
-    <div class ="pres"></div>
+    <!-- <div class ="pres"></div>
     <div class ="sports"></div>
     <div class ="tech"></div>
     <div class ="arts"></div>
     <div class ="world"></div>
-    <div class ="us"></div>
+    <div class ="us"></div> -->
     </div>
 </body>
 
