implemented ability to get and display various information by year

--- a/index.html
+++ b/index.html
@@ -30,14 +30,26 @@
 
       <!-- <button class ="return">return home</button> -->
     </div>
+    <div id="player"></div>
+    <div id="player"></div>
     <div class ="articles">
-    <!-- <div class ="pres"></div>
+    <div class ="pres"></div>
     <div class ="sports"></div>
     <div class ="tech"></div>
     <div class ="arts"></div>
     <div class ="world"></div>
-    <div class ="us"></div> -->
-    </div>
+    <div class ="us"></div>
+    <div class ="albums"></div>
+    <div class = "songs"></div>
+    <div class = "president"></div>
+    <div class = "actor"></div>
+    <div class = "actress"></div>
+    <div class = "movie"></div>
+    <div class = "sbChamps"></div>
+    <div class = "mlbChamps"></div>
+    <div class = "nbaChamps"></div>
+    <div class = "ncaaChamps"></div>
+    <div class = "nhlChamps"></div>
 </body>
 
 <script
