change input values

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head> 
 <body>
     <form class = "topicInYearSearch">
-    <input class="topic" type="text" value="hjgjj">
+    <input class="topic" type="text" value="Clinton">
     <input class="topicYear" type="text" value="1992">
     <button class="findTopic">Find Topic</button>
     </form>
     <div class ="topicValidBox"></div>
     <form class ="dateSearch">
-      <input class="date " type="text"/>
-      <input class="year" type="number" value = "1985" />
+      <input class="date " type="text" value ="July 10th"/>
+      <input class="year" type="number" value = "2001" />
       <button class="enter" type="submit">Go!</button>
       <button class="random">Random</button>
       <div class ="validationBox "></div>
