removing double albums

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </form>
     <div class ="topicValidBox"></div>
     <form class ="dateSearch">
-      <input class="date " type="text" value ="July 10th"/>
+      <input class="date " type="text" value =""/>
       <input class="year" type="number" value = "2001" />
       <button class="enter" type="submit">Go!</button>
       <button class="random">Random</button>
